<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智校信</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_simple_request_btn">Execute simple request</string>
    <string name="activity_json_request_btn">Execute json request</string>
    <string name="activity_params_request_btn">POST params</string>
    <string name="activity_gson_request_btn">Execute gson request</string>
    <string name="image_loading_btn_request">Image loading</string>
    <string name="back">返回</string>
    <string name="again_exit">再按一次退出程序</string>
    <string name="home_news">首页</string>
    <string name="home_location">课程表</string>
    <string name="home_more"></string>
    <string name="home_contacts">通讯录</string>
    <string name="home_profile">我</string>
    <string name="login_btn">登录</string>
    <string name="sumbit">发布</string>
    <string name="login_forget">忘记密码</string>
    <string name="forget_verifycode">获取验证码</string>
    <string name="pro_msg_setting">消息设置</string>
    <string name="pro_action_center">角色切换</string>
    <string name="pro_feedback">反馈中心</string>
    <string name="pro_upgrade">版本更新</string>
    <string name="pro_about">关于我们</string>
    <string name="pro_logoff">注销</string>
    <string name="today_title">孩子外出踏青应注意事项孩子外出踏青应注意事项</string>
    <string name="notice">通知公告</string>
    <string name="home">首页</string>
    <string name="sumbit_notice">班级公告</string>
    <string name="notice_detail">公告详情</string>
    <string name="sucess">完成</string>
    <string name="today_read">每日一读</string>
    <string name="today_read_detail">每日一读详情</string>
    <string name="today_read_collect">我的收藏</string>
    <string name="home_wrok">家庭作业</string>
    <string name="no_net">请检查网络!</string>
    <string name="sumbit_home_wrok">编辑作业</string>
    <string name="home_wrok_detail">作业详情</string>
    <string name="location_service">在哪儿</string>
    <string name="home_school">家校互动</string>
    <string name="online_interaction">在线互动</string>
    <string name="home_school_detail">互动详情</string>
    <string name="leave_manage">请假管理</string>
    <string name="leave_detail">请假详情</string>
    <string name="cancel1">取消</string>
    
    
    <string name="loc_home_location">定位</string>
    <string name="loc_home_locus">轨迹</string>
    <string name="loc_home_msg">消息</string>
    <string name="loc_home_sett">设置</string>
    
    <string name="desc_shrinkup">收起</string>  
    <string name="desc_spread">全文</string>  
    
    <string name="user_info_eorr">用户信息不完整,请完善后使用!</string>
    <string name="lbs_eorr">您尚未开通定位服务,详情请咨询当地客服人员!</string>

</resources>